# modernBERTbr

./: .gitignore  README.md  bert_train.py  collator.py  count_lines.py  count_tokens.py  evaluate_mlm.py  main.py  modernbert_train.py  process_dataset.py  pyproject.toml  tokenize_dataset.py  train.py
notebooks/: test_bo.ipynb  test_cl.ipynb  test_co.ipynb  test_gl.ipynb  test_ig.ipynb  test_lu.ipynb
