[project]
name = "modernbertbr"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers[torch]>=4.51.3",
    "datasets>=2.14.0",
    "ftfy>=6.3.1",
    "beautifulsoup4>=4.13.4",
    "torch>=2.7.0",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
]
